<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rl_nav_height"
            android:background="@mipmap/nav_top_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dialogue_translate"
                android:textColor="@color/nav_title"
                android:textSize="@dimen/tv_nav_title" />


        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialogue_out_height"
            android:background="@mipmap/main_bottom_bg"
            android:gravity="bottom">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/rl_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialogue_inner_height">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/cl_right">

                    <RelativeLayout
                        android:id="@+id/rl_usually_qa"
                        android:layout_width="@dimen/rl_main_flag_width"
                        android:layout_height="@dimen/rl_main_flag_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/wv_left_lang"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_usually_qa"
                            android:layout_width="@dimen/iv_usually_size"
                            android:layout_height="@dimen/iv_usually_size"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:src="@mipmap/usually_qa" />

                        <TextView
                            android:id="@+id/tv_usually_qa"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/tv_main_country_name_height"
                            android:layout_below="@+id/iv_usually_qa"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:text="@string/usually_qa"
                            android:textColor="@color/white"
                            android:textSize="@dimen/tv_main_country_name_size" />

                    </RelativeLayout>


                    <com.hnsh.dialogue.views.WaveViewWithImg
                        android:id="@+id/wv_left_lang"
                        android:layout_width="@dimen/wvwi_size"
                        android:layout_height="@dimen/wvwi_size"
                        android:background="?android:attr/selectableItemBackground"
                        app:color="#09435e"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/rl_left_lang"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/rl_usually_qa"
                        app:layout_constraintTop_toTopOf="parent"
                        app:src="@mipmap/ic_left_record" />

                    <RelativeLayout
                        android:id="@+id/rl_left_lang"
                        android:layout_width="@dimen/rl_main_flag_width"
                        android:layout_height="@dimen/rl_main_flag_height"
                        android:clickable="false"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/wv_left_lang"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_left_lang"
                            android:layout_width="@dimen/iv_flag_width"
                            android:layout_height="@dimen/iv_flag_height"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:src="@mipmap/ic_launcher_round" />

                        <TextView
                            android:id="@+id/tv_left_country_name"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/tv_main_country_name_height"
                            android:layout_below="@+id/iv_left_lang"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:text="@string/tv_china"
                            android:textColor="@color/white"
                            android:textSize="@dimen/tv_main_country_name_size" />

                    </RelativeLayout>


                </android.support.constraint.ConstraintLayout>


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toRightOf="@+id/cl_left"
                    app:layout_constraintRight_toRightOf="parent">


                    <com.hnsh.dialogue.views.WaveViewWithImg
                        android:id="@+id/wv_right_lang"
                        android:layout_width="@dimen/wvwi_size"
                        android:layout_height="@dimen/wvwi_size"
                        android:background="?android:attr/selectableItemBackground"
                        app:color="#08295d"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/rl_right_lang"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:src="@mipmap/ic_right_record" />

                    <RelativeLayout
                        android:id="@+id/rl_right_lang"
                        android:layout_width="@dimen/rl_main_flag_width"
                        android:layout_height="@dimen/rl_main_flag_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/wv_right_lang"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_right_lang"
                            android:layout_width="@dimen/iv_flag_width"
                            android:layout_height="@dimen/iv_flag_height"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/ic_launcher_round" />

                        <TextView
                            android:id="@+id/tv_right_country_name"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/tv_main_country_name_height"
                            android:layout_below="@+id/iv_right_lang"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:text="@string/tv_china"
                            android:textColor="@color/white"
                            android:textSize="@dimen/tv_main_country_name_size" />

                    </RelativeLayout>


                </android.support.constraint.ConstraintLayout>


            </android.support.constraint.ConstraintLayout>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_go_home"
        android:layout_width="43dp"
        android:layout_height="46dp"
        android:src="@mipmap/go_home"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="50dp"/>

</FrameLayout>